fixing sytling on mobile

--- a/src/variables.scss
+++ b/src/variables.scss
@@ -19,7 +19,6 @@ $svg-accent: yellow;
 
 //Bootstrap Mods
 $info: $secondary-light;
-$success: $secondary-dark;
 
 //Fonts
 
